# my-cloudwatch-logs-mcp-server

./: CLAUDE.md  README.md  mcp_tools_japanese_translation.md  pyproject.toml  pytest.ini
docs/: mcp_tools_ja.md  query_syntax_ja.md
src/cloudwatch_logs/: __init__.py
src/cloudwatch_logs/documentation/: __init__.py  query_syntax.py
src/cloudwatch_logs/domain/: __init__.py  exceptions.py  models.py
src/cloudwatch_logs/services/: __init__.py  analysis_service.py  documentation_service.py  logs_service.py
src/cloudwatch_logs/utils/: __init__.py  data_utils.py  time_utils.py
src/interfaces/: __init__.py  mcp_server.py  mcp_tools.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/tools/: __init__.py  test_aws_agents_tools.py  test_query_syntax_tools.py
tests/unit/: __init__.py
tests/unit/domain/: __init__.py  test_exceptions.py  test_models.py
tests/unit/services/: __init__.py  test_analysis_service.py  test_documentation_service.py  test_logs_service.py
tests/unit/utils/: __init__.py  test_data_utils.py  test_time_utils.py
