[project]
name = "cloudwatch-logs-mcp"
version = "0.1.0"
description = "CloudWatch Logs MCP Server with Clean Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.22",
    "loguru>=0.7.0",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.10.6",
]

[project.scripts]
"cloudwatch-logs-mcp" = "interfaces.mcp_server:main"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
    "pyright>=1.1.398",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
]
force-exclude = true

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules", "**/dist", "**/build"]